--- a/src/main/resources/Templates/Parent/addParentForm.html
+++ b/src/main/resources/Templates/Parent/addParentForm.html
@@ -5,8 +5,8 @@
     <title>Add Parent</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
     <style>
         table, th, td{
             border: 1px solid black;
@@ -14,6 +14,7 @@
         }
     </style>
 </head>
+
 <body>
 <div class="container">
     <div class="row">
