--- a/src/main/resources/Templates/Parent/indexParent.html
+++ b/src/main/resources/Templates/Parent/indexParent.html
@@ -5,9 +5,10 @@
     <title>Manager Parent</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet" type="text/css">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
+
 <body>
 <div><h1>Parent Manage</h1></div>
 <div class="container">
