--- a/src/main/resources/Templates/School/Classes/addFormClass.html
+++ b/src/main/resources/Templates/School/Classes/addFormClass.html
@@ -5,11 +5,13 @@
     <title>Add Class</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
+
 <body>
 <h1>Add new Class</h1>
+
 <div>
     <form th:action="@{/m-class/add-process}" th:object="${classes}" method="post">
         <div id="autoHide">
@@ -32,7 +34,7 @@
         <div>
             <label>Select School: </label>
             <select id="school_select" th:field="*{school}">
-                <option value="" disabled>--Select School--</option>
+                <option value="0" disabled>--Select School--</option>
                 <option th:each="school : ${schoolList}" th:value="${school.id}" th:text="${school.name} +' ('+ ${school.level}+')'"></option>
             </select>
             <div th:if="${#fields.hasErrors('school')}">
@@ -81,52 +83,61 @@
 <script>
     // if school selected, check level school to input class grade
     document.addEventListener('DOMContentLoaded', function() {
-    const schoolSelect = document.getElementById('school_select');
-    const gradeSelect = document.getElementById('class_grade_select');
+        const schoolSelect = document.getElementById('school_select');
+        const gradeSelect = document.getElementById('class_grade_select');
 
-    schoolSelect.addEventListener('change', function() {
-        const schoolId = schoolSelect.value;
+        function getSchoolById(schoolId){
+            if (schoolId) {
+                fetch(`/m-class/getSchoolById/${schoolId}`)
+                    .then(response => response.json())
+                    .then(school => {
+                        const grade = school.level;
 
-        if (schoolId) {
-            fetch(`/m-class/getSchoolById/${schoolId}`)
-                .then(response => response.json())
-                .then(school => {
-                    const grade = school.level;
+                        // Xóa tất cả các option hiện tại trong gradeSelect
+                        gradeSelect.innerHTML = '';
 
-                    // Xóa tất cả các option hiện tại trong gradeSelect
-                    gradeSelect.innerHTML = '';
+                        // Tạo lại các option dựa trên level của school
+                        let options = [];
+                        if (grade === 'Primary_School') {
+                            options = [1, 2, 3, 4, 5];
+                        } else if (grade === 'Junior_High_School') {
+                            options = [6, 7, 8, 9];
+                        } else if (grade === 'High_School'){
+                            options = [10, 11, 12];
+                        }
 
-                    // Tạo lại các option dựa trên level của school
-                    let options = [];
-                    if (grade === 'Primary School') {
-                        options = [1, 2, 3, 4, 5];
-                    } else if (grade === 'Junior High School') {
-                        options = [6, 7, 8, 9];
-                    } else if (grade === 'High School'){
-                        options = [10, 11, 12];
-                    }
+                        // Thêm các option mới vào gradeSelect
+                        options.forEach(function(opt) {
+                            const optionElement = document.createElement('option');
+                            optionElement.value = opt;
+                            optionElement.textContent = opt;
+                            gradeSelect.appendChild(optionElement);
+                        });
 
-                    // Thêm các option mới vào gradeSelect
-                    options.forEach(function(opt) {
-                        const optionElement = document.createElement('option');
-                        optionElement.value = opt;
-                        optionElement.textContent = opt;
-                        gradeSelect.appendChild(optionElement);
+                        // Tùy chọn "Select Grade"
+                        const defaultOption = document.createElement('option');
+                        defaultOption.value = "0";
+                        defaultOption.textContent = "--Select Grade--";
+                        defaultOption.selected = true;
+                        gradeSelect.prepend(defaultOption);
+                    })
+                    .catch(error => {
+                        console.error('Error fetching school data:', error);
                     });
+            }
+        }
 
-                    // Tùy chọn "Select Grade"
-                    const defaultOption = document.createElement('option');
-                    defaultOption.value = "0";
-                    defaultOption.textContent = "--Select Grade--";
-                    defaultOption.selected = true;
-                    gradeSelect.prepend(defaultOption);
-                })
-                .catch(error => {
-                    console.error('Error fetching school data:', error);
-                });
+        schoolSelect.addEventListener('change', function() {
+            const schoolId = schoolSelect.value;
+            getSchoolById(schoolId);
+        });
+
+        // if school selected
+        const schoolId = schoolSelect.value;
+        if(schoolId){
+            getSchoolById(schoolId);
         }
     });
-});
 </script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
