--- a/src/main/resources/Templates/School/Classes/formModifyClass.html
+++ b/src/main/resources/Templates/School/Classes/formModifyClass.html
@@ -5,9 +5,10 @@
     <title>Modify Class</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
+
 <body>
 <h1>Modify Class</h1>
 <div>
@@ -15,6 +16,7 @@
         <div th:if="${Error}" class="alert alert-danger">
             <span th:text="${Error}"></span>
         </div>
+
         <div>
             <label th:field="*{id}">Class Id: </label>
             <input type="hidden" th:field="*{id}" name="classid">
@@ -38,7 +40,7 @@
             <label>Class of School Id: </label>
             <select id="school_select" th:field="*{school}">
                 <option th:value="0">--Select School--</option>
-                <option th:each="school : ${schoolList}" th:value="${school.id}" th:text="${school.name}"></option>
+                <option th:each="school : ${schoolList}" th:value="${school.id}" th:text="${school.name} +' ('+${school.level}+')'"></option>
             </select>
             <div th:if="${#fields.hasErrors('school')}">
                 <ul>
@@ -48,7 +50,7 @@
         </div>
         <div>
             <label>Grade Class: </label>
-            <select th:field="*{grade}">
+            <select id="class_grade_select"  th:field="*{grade}">
                 <option th:value="0">--Select Grade--</option>
                 <option th:value="1">1</option>
                 <option th:value="2">2</option>
@@ -82,6 +84,58 @@
     <a class="btn btn-primary" th:href="@{/m-class/showManageClass}">Class List Manage</a>
 </div>
 </body>
+<script>
+    // if school selected, check level school to input class grade
+    document.addEventListener('DOMContentLoaded', function() {
+        const schoolSelect = document.getElementById('school_select');
+        const gradeSelect = document.getElementById('class_grade_select');
+
+        function getSchoolById(schoolId){
+            if (schoolId) {
+                fetch(`/m-class/getSchoolById/${schoolId}`)
+                    .then(response => response.json())
+                    .then(school => {
+                        const grade = school.level;
+
+                        // Xóa tất cả các option hiện tại trong gradeSelect
+                        gradeSelect.innerHTML = '';
+
+                        // Tạo lại các option dựa trên level của school
+                        let options = [];
+                        if (grade === 'Primary_School') {
+                            options = [1, 2, 3, 4, 5];
+                        } else if (grade === 'Junior_High_School') {
+                            options = [6, 7, 8, 9];
+                        } else if (grade === 'High_School'){
+                            options = [10, 11, 12];
+                        }
+
+                        // Thêm các option mới vào gradeSelect
+                        options.forEach(function(opt) {
+                            const optionElement = document.createElement('option');
+                            optionElement.value = opt;
+                            optionElement.textContent = opt;
+                            gradeSelect.appendChild(optionElement);
+                        });
+                    })
+                    .catch(error => {
+                        console.error('Error fetching school data:', error);
+                    });
+            }
+        }
+
+        schoolSelect.addEventListener('change', function() {
+            const schoolId = schoolSelect.value;
+            getSchoolById(schoolId);
+        });
+
+        // if school selected
+        const schoolId = schoolSelect.value;
+        if(schoolId){
+            getSchoolById(schoolId);
+        }
+    });
+</script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
