--- a/src/main/resources/Templates/School/NoteBook/DetailNoteBook/addFormDetailNote.html
+++ b/src/main/resources/Templates/School/NoteBook/DetailNoteBook/addFormDetailNote.html
@@ -5,9 +5,10 @@
     <title>Add Detail NoteBook</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
+
 <body>
 <h1>Add new Detail NoteBook</h1>
 <div>
@@ -21,6 +22,7 @@
             <label>Id NoteBook: <span th:text="${noteBook_id}"></span></label>
             <input type="hidden" th:field="*{noteBook}" th:value="${noteBook_id}">
         </div>
+
         <div>
             <label>Subject: </label>
             <select th:field="*{subject}" id="subject_select">
@@ -95,4 +97,10 @@
     <a class="btn btn-primary" th:href="@{/m-note-detail/showManageDetailNote(id=${noteBook_id})}">NoteDetail List Manage</a>
 </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </html>
