--- a/src/main/resources/Templates/School/NoteBook/addFormNoteBook.html
+++ b/src/main/resources/Templates/School/NoteBook/addFormNoteBook.html
@@ -6,8 +6,8 @@
     <title>Add NoteBook</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
                 <label>Select School: </label>
                 <select th:field="*{school}" id="school_select" required>
                     <option value="">--Select School--</option>
-                    <option th:each="school : ${schoolList}" th:value="${school.id}" th:text="${school.name}"></option>
+                    <option th:each="school : ${schoolList}" th:value="${school.id}" th:text="${school.name} +' ('+${school.level}+')'"></option>
                 </select>
                 <div th:if="${#fields.hasErrors('school')}">
                     <ul>
@@ -34,7 +34,7 @@
             <div>
                 <label>Select Class: </label>
                 <select th:field="*{classes}" id="class_select" required>
-                    <option value="0">--Select Class--</option>
+                    <option value="#">--Select Class--</option>
                 </select>
                 <div th:if="${#fields.hasErrors('classes')}">
                     <ul>
@@ -54,6 +54,7 @@
         <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
         <a class="btn btn-primary" th:href="@{/m-note/showManageNotebook}">NoteBook List Manage</a>
     </div>
+
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const schoolSelect = document.getElementById('school_select');
@@ -69,12 +70,16 @@
 
                             // populate new class
                             classes.forEach(classItem => {
-                                const option = document.createElement('optiion');
+                                const option = document.createElement('option');
                                 option.value = classItem.id;
                                 option.textContent = classItem.name;
                                 classSelect.appendChild(option);
                             });
                         })
+                        .then(error => console.error('Error fetching class:', error));
+                } else {
+                    // if no school selected
+                    classSelect.innerHTML = '<option value="0">--Select Class--</option>';
                 }
             }
 
@@ -91,5 +96,4 @@
         });
     </script>
 </body>
-
 </html>
