--- a/src/main/resources/Templates/School/NoteBook/indexNotebook.html
+++ b/src/main/resources/Templates/School/NoteBook/indexNotebook.html
@@ -5,8 +5,8 @@
     <title>Manager NoteBook</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet" type="text/css">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
 
 <body>
@@ -16,6 +16,7 @@
         <div th:if="${Error}">
             <span th:text="${Error}" class="alert alert-danger"></span>
         </div>
+
         <div th:if="${success}">
             <span th:text="${success}" class="alert alert-success"></span>
         </div>
@@ -51,6 +52,7 @@
     <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
 </div>
 </body>
+
 <script src="/resources/static/JavaScript/function.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
