--- a/src/main/resources/Templates/School/NoteBook/modifyFormNotebook.html
+++ b/src/main/resources/Templates/School/NoteBook/modifyFormNotebook.html
@@ -5,11 +5,12 @@
     <title>Modify NoteBook</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
 <body>
 <h1>Modify NoteBook</h1>
+
 <div>
     <form th:action="@{/m-note/modify-process}" th:object="${NoteBook}" method="post">
         <div th:if="${Error}" class="alert alert-danger">
@@ -26,9 +27,10 @@
         <div>
             <label>Select School: </label>
             <select th:field="*{school}" id="school_select" required>
-                <option value="">--Select School--</option>
-                <option th:each="school : ${schoolList}" th:value="${school.id}" th:text="${school.name}"></option>
+                <option value="" selected>--Select School--</option>
+                <option th:each="school : ${schoolList}" th:value="${school.id}" th:text="${school.name} +' ('+${school.level}+')'"></option>
             </select>
+            <span th:text="*{school.name}+' ('+ *{school.level}+')'"></span>
             <div th:if="${#fields.hasErrors('school')}">
                 <ul>
                     <li th:each="error: ${#fields.hasErrors('school')}" th:text="${error}"></li>
@@ -59,6 +61,7 @@
     <a class="btn btn-primary" th:href="@{/m-note/showManageNotebook}">NoteBook List Manage</a>
 </div>
 </body>
+
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         const schoolSelect = document.getElementById('school_select');
@@ -74,12 +77,16 @@
 
                         // populate new class
                         classes.forEach(classItem => {
-                            const option = document.createElement('optiion');
+                            const option = document.createElement('option');
                             option.value = classItem.id;
                             option.textContent = classItem.name;
                             classSelect.appendChild(option);
                         });
                     })
+                    .then(error => console.error('Error fetching class:', error));
+            } else {
+                // if no school selected
+                    classSelect.innerHTML = '<option value="0">--Select Class--</option>';
             }
         }
 
