--- a/src/main/resources/Templates/School/StudyRecord/addFormStudyRecord.html
+++ b/src/main/resources/Templates/School/StudyRecord/addFormStudyRecord.html
@@ -5,9 +5,10 @@
     <title>Add StudyRecord</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
+
 <body>
 <h1>Add new StudyRecord</h1>
 <div>
@@ -21,17 +22,12 @@
             </div>
         </div>
         <div>
-            <label>Student Id: </label>
-            <input type="text" th:field="*{student}" placeholder="Input student id" name="student" required>
-            <div th:if="${#fields.hasErrors('student')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('student')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label>School Id: </label>
-            <input type="text" th:field="*{school}" placeholder="Input school id" name="school" required>
+            <label for="school_select">Select School: </label>
+            <select id="school_select" th:field="*{school}">
+                <option value="0">--Select School--</option>
+                <option th:each="school : ${schoolList}" th:value="${school.id}"
+                        th:text="${school.name} +' ('+${school.level}+')'"></option>
+            </select>
             <div th:if="${#fields.hasErrors('school')}">
                 <ul>
                     <li th:each="error: ${#fields.hasErrors('school')}" th:text="${error}"></li>
@@ -39,14 +35,43 @@
             </div>
         </div>
         <div>
+            <label for="class_select">Select Class: </label>
+            <select id="class_select">
+                <option value="0">--Select Class--</option>
+            </select>
+        </div>
+        <div>
+            <label for="student_select">Select Student: </label>
+            <select id="student_select" th:field="*{student}">
+                <option value="0">--Select Student--</option>
+            </select>
+            <div th:if="${#fields.hasErrors('student')}">
+                <ul>
+                    <li th:each="error: ${#fields.hasErrors('student')}" th:text="${error}"></li>
+                </ul>
+            </div>
+        </div>
+        <div>
             <label>School Year: </label>
-            <input type="text" th:field="*{schoolYear}" placeholder="Input school year" name="school-year" required>
+            <select th:field="*{schoolYear}">
+                <option value="">--Select SchoolYear--</option>
+                <option th:value="2021_2022">2021-2022</option>
+                <option th:value="2022_2023">2022-2023</option>
+                <option th:value="2023_2024">2023-2024</option>
+                <option th:value="2024_2025">2024-2025</option>
+                <option th:value="2025_2026">2025-2026</option>
+                <option th:value="2026_2027">2026-2027</option>
+                <option th:value="2027_2028">2027-2028</option>
+                <option th:value="2028_2029">2028-2029</option>
+                <option th:value="2029_2030">2029-2030</option>
+            </select>
             <div th:if="${#fields.hasErrors('schoolYear')}">
                 <ul>
                     <li th:each="error: ${#fields.hasErrors('schoolYear')}" th:text="${error}"></li>
                 </ul>
             </div>
         </div>
+
         <div>
             <label>Transcript: </label>
             <div th:each="transcript : ${transcripts != null ? transcripts : 'null'}">
@@ -88,4 +113,108 @@
     <a class="btn btn-primary" th:href="@{/m-study/showManageStudyRecord}">StudyRecord List Manage</a>
 </div>
 </body>
+<script>
+    document.addEventListener('DOMContentLoaded', function(){
+    const schoolSelect = document.getElementById('school_select');
+    const classSelect = document.getElementById('class_select');
+    const studentSelect = document.getElementById('student_select');
+
+    function getClassBySchool(schoolId){
+        if(schoolId){
+            fetch(`/m-class/getClassBySchoolId/${schoolId}`)
+            .then(response => response.json())
+            .then(classes => {
+                // clear previous class
+                classSelect.innerHTML = '<option value = "0">--Select Class--</option>';
+
+                // populate new class
+                classes.forEach(classItem => {
+                    const option = document.createElement('option');
+                    option.value = classItem.id;
+                    option.textContent = classItem.name;
+                    classSelect.appendChild(option);
+                });
+            })
+            .catch(error => console.error('Error fetching Class:', error));
+        } else {
+            // if no school selected
+            classSelect.innerHTML = '<option value="0">--Select Class--</option>';
+        }
+    }
+
+    function getStudentByClassAndSchool(schoolId, classId){
+        if(schoolId && classId){
+            fetch(`/m-student/getStudentByClassAndSchool/${schoolId}/${classId}`)
+            .then(response => response.json())
+            .then(students => {
+                // clear previous student
+                studentSelect.innerHTML='<option value="0">--Select Student--</option>';
+                students.forEach(studentItem =>{
+                    const option = document.createElement('option');
+                    option.value = studentItem.id;
+                    option.textContent = `${studentItem.lastName} ${studentItem.firstName}`;
+                });
+            })
+            .catch(error =>console.error('Error fetching Student:', error));
+        } else {
+            // if no class or school selected
+            studentSelect.innerHTML='<option value="0">--Select Student--</option>';
+        }
+    }
+
+    function getClassByStudentAndSchool(schoolId, studentId){
+        if(schoolId && studentId){
+            fetch(`/m-class/getClassByStudentAndSchool/${schoolId}/${studentId}`)
+            .then(response => response.json())
+            .then(classes => {
+                // clear previous class
+                classSelect.innerHTML='<option value ="0">--Select Class--</option>';
+
+                // populate new class
+                classes.forEach(classItem => {
+                    const option = document.createElement('option');
+                    option.value = classItem.id;
+                    option.textContent = classItem.name;
+                    classSelect.appendChild(option);
+                });
+            })
+            .catch(error => console.error('Error fetching Class: ', error));
+        } else {
+            // if the student or school not select
+            classSelect.innerHTML='<option value ="0">--Select Class--</option>';
+        }
+    }
+
+    // if school and student selected
+    const schoolId = schoolSelect.value;
+    const studentId = studentSelect.value;
+    if(schoolId && studentId){
+        getClassByStudentAndSchool(schoolId, studentId);
+    }
+
+    // if school and class selected
+    const classId = classSelect.value;
+    if(schoolId && classId){
+        getStudentByClassAndSchool(schoolId, classId);
+    }
+
+    // event listener
+    schoolSelect.addEventListener('change', function(){
+        const schoolId = schoolSelect.value;
+        getClassBySchool(schoolId);
+    });
+
+    classSelect.addEventListener('change', function(){
+        const schoolId = schoolSelect.value;
+        const classId = classSelect.value;
+        getStudentByClassAndSchool(schoolId, classId);
+    });
+});
+</script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </html>
