--- a/src/main/resources/Templates/School/StudyRecord/indexStudyRecord.html
+++ b/src/main/resources/Templates/School/StudyRecord/indexStudyRecord.html
@@ -5,9 +5,10 @@
     <title>Manager StudyRecord</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet" type="text/css">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
+
 <body>
 <div>
     <h1>Manage StudyRecord</h1>
@@ -35,8 +36,14 @@
         <tbody>
         <tr th:each="study : ${studyRecordList}">
             <td th:text="${study.id}"></td>
-            <td th:text="${study.student.firstName}"></td>
-            <td th:text="${study.school.name}"></td>
+            <td>
+                <span th:if="${study.student != null}" th:text="${study.student.firstName}"></span>
+                <span th:if="${study.student == null}">[null]</span>
+            </td>
+            <td>
+                <span th:if="${study.school != null}" th:text="${study.school.name}"></span>
+                <span th:if="${study.school == null}">[null]</span>
+            </td>
             <td th:text="${study.schoolYear}"></td>
             <td>
                 <span th:each="transcript : ${study.transcriptList != null ? study.transcriptList : 'null'}"
@@ -57,7 +64,6 @@
     <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
 </div>
 </body>
-<script src="/resources/static/JavaScript/function.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
