--- a/src/main/resources/Templates/School/StudyRecord/modifyStudyRecord.html
+++ b/src/main/resources/Templates/School/StudyRecord/modifyStudyRecord.html
@@ -5,9 +5,10 @@
     <title>Modify StudyRecord</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
+
 <body>
 <h1>Modify StudyRecord</h1>
 <div>
@@ -25,14 +26,25 @@
             <input type="hidden" th:field="*{id}">
         </div>
         <div>
-            <label>Student Id: <b><span th:text="*{student.firstName}"></span></b></label>
-        </div>
-        <div>
             <label>School Id: <b><span th:text="*{school.name}"></span></b></label>
         </div>
         <div>
+            <label>Student Id: <b><span th:text="*{student.firstName}"></span></b></label>
+        </div>
+        <div>
             <label>School Year: </label>
-            <input type="text" th:field="*{schoolYear}" placeholder="Input school year" name="school-year">
+            <select th:field="*{schoolYear}">
+                <option value="">--Select SchoolYear--</option>
+                <option th:value="2021_2022">2021-2022</option>
+                <option th:value="2022_2023">2022-2023</option>
+                <option th:value="2023_2024">2023-2024</option>
+                <option th:value="2024_2025">2024-2025</option>
+                <option th:value="2025_2026">2025-2026</option>
+                <option th:value="2026_2027">2026-2027</option>
+                <option th:value="2027_2028">2027-2028</option>
+                <option th:value="2028_2029">2028-2029</option>
+                <option th:value="2029_2030">2029-2030</option>
+            </select>
             <div th:if="${#fields.hasErrors('schoolYear')}">
                 <ul>
                     <li th:each="error: ${#fields.hasErrors('schoolYear')}" th:text="${error}"></li>
@@ -79,4 +91,10 @@
     <a class="btn btn-primary" th:href="@{/m-study/showManageStudyRecord}">StudyRecord List Manage</a>
 </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </html>
