--- a/src/main/resources/Templates/School/Subject/ScoreCard/addFormScoreCard.html
+++ b/src/main/resources/Templates/School/Subject/ScoreCard/addFormScoreCard.html
@@ -5,9 +5,10 @@
     <title>Add Score Card</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
+
 <body>
 <h1>Add new Score Card</h1>
 <div>
@@ -20,10 +21,46 @@
                 <h3>You created a new score-card "<span th:text="${success}"></span>"</h3>
             </div>
         </div>
-        <div th:if="${schoolSelected != null}">
-            <label>School: <span th:text="${schoolSelected.name}"></span></label>
-            <input type="hidden" name="school" th:value="${schoolSelected.id}">
+        <div>
+            <label>School Select: </label>
+            <select id="school_select" th:field="*{school}">
+                <option value="0">--Select School--</option>
+                <option th:each="school : ${schoolList}" th:value="${school.id}" th:text="${school.name} +' ('+ ${school.level}+')'"></option>
+            </select>
         </div>
+
+        <div>
+            <label>Select Class:</label>
+            <select id="class_select">
+                <option value="0">--Select Class--</option>
+            </select>
+        </div>
+        <div>
+            <label>Student: </label>
+            <th:block>
+                <select id="student_select" th:field="*{student}" required>
+                    <option value="0">--Select Student--</option>
+                </select>
+            </th:block>
+            <div th:if="${#fields.hasErrors('student')}">
+                <ul>
+                    <li th:each="error: ${#fields.hasErrors('student')}" th:text="${error}"></li>
+                </ul>
+            </div>
+        </div>
+
+        <div>
+            <label>Subject: </label>
+            <select th:field="*{subject}">
+                <option value="0">--Select Subject</option>
+            </select>
+            <div th:if="${#fields.hasErrors('subject')}">
+                <ul>
+                    <li th:each="error: ${#fields.hasErrors('subject')}" th:text="${error}"></li>
+                </ul>
+            </div>
+        </div>
+
         <div>
             <label>Name Exam: </label>
             <select th:field="*{nameExam}" required>
@@ -39,25 +76,6 @@
             <div th:if="${#fields.hasErrors('nameExam')}">
                 <ul>
                     <li th:each="error: ${#fields.hasErrors('nameExam')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-
-        <div>
-            <label>Student: </label>
-            <th:block th:if="${studentList != null} ">
-                <select th:field="*{student}" required>
-                    <option value="">--Select Student--</option>
-                    <option th:each="student : ${studentList}" th:value="${student.id}"
-                            th:text="${student.firstName}"></option>
-                </select>
-            </th:block>
-            <th:block th:if="${studentList == null} ">
-                <span>Chọn một trường để xem danh sách sinh viên.</span>
-            </th:block>
-            <div th:if="${#fields.hasErrors('student')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('student')}" th:text="${error}"></li>
                 </ul>
             </div>
         </div>
@@ -91,21 +109,6 @@
             </div>
         </div>
         <div>
-            <label>Subject: </label>
-            <div>
-                <select th:field="*{subject}">
-                    <option value="">--Select Subject</option>
-                    <option th:each="subject : ${subjectList}" th:value="${subject.id}"
-                            th:text="${subject.nameSubject}"></option>
-                </select>
-            </div>
-            <div th:if="${#fields.hasErrors('subject')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('subject')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
             <label>Score: </label>
             <input type="number" th:field="*{score}" placeholder="Input Score" name="score" min="0" step="0.1" max="10"
                    required>
@@ -125,4 +128,136 @@
     <a class="btn btn-primary" th:href="@{/m-score-card/showManageScoreCard}">ScoreCard List Manage</a>
 </div>
 </body>
+<script>
+    document.addEventListener('DOMContentLoaded', function(){
+        const schoolSelect = document.getElementById('school_select');
+        const classSelect = document.getElementById('class_select');
+        const studentSelect = document.getElementById('student_select');
+
+        function getClassBySchool(schoolId){
+            if(schoolId){
+                fetch(`/m-class/getClassBySchoolId/${schoolId}`)
+                .then(response => response.json())
+                .then(classes => {
+                    // clear previous school
+                    classSelect.innerHTML = '<option value = "0">--Select Class--</option>';
+
+                    // populate new school
+                    classes.forEach(classItem => {
+                        const option = document.createElement('option');
+                        option.value = classItem.id;
+                        option.textContent = classItem.name;
+                        classSelect.appendChild(option);
+                    });
+                })
+                .catch(error => console.error('Error fetching Class:', error));
+            } else {
+                // if no school selected
+                classSelect.innerHTML = '<option value = "0">--Select Class--</option>';
+            }
+        }
+
+        function getStudentByClassAndSchool(schoolId, classId){
+            if(schoolId && classId){
+                fetch(`/m-student/getStudentByClassAndSchool/${schoolId}/${classId}`)
+                .then(response => response.json())
+                .then(students => {
+                    // clear previous student
+                    studentSelect.innerHTML='<option value="0">--Select Student--</option>';
+
+                    students.forEach(studentItem =>{
+                        const option = document.createElement('option');
+                        option.value = studentItem.id;
+                        option.textContent = `${studentItem.lastName} ${studentItem.firstName}`;
+                        studentSelect.appendChild(option); // Append the option to the select element
+                    });
+                })
+                .catch(error =>console.error('Error fetching Student:', error));
+            } else {
+                // if no class or school selected
+                studentSelect.innerHTML='<option value="0">--Select Student--</option>';
+            }
+        }
+
+        function getClassByStudentAndSchool(schoolId, studentId){
+            if(schoolId && studentId){
+                fetch(`/m-class/getClassByStudentAndSchool/${schoolId}/${studentId}`)
+                .then(response => response.json())
+                .then(classes => {
+                    // clear previous class
+                    classSelect.innerHTML='<option value ="0">--Select Class--</option>';
+
+                    // populate new class
+                    classes.forEach(classItem => {
+                        const option = document.createElement('option');
+                        option.value = classItem.id;
+                        option.textContent = classItem.name;
+                        classSelect.appendChild(option);
+                    });
+                })
+                .catch(error => console.error('Error fetching Class: ', error));
+            } else {
+                // if the student or school not select
+                classSelect.innerHTML='<option value ="0">--Select Class--</option>';
+            }
+        }
+
+        function getSubjectBySchool(schoolId){
+            if(schoolId){
+                fetch(`/m-subject/getSubjectBySchool/${schoolId}`)
+                .then(response => response.json())
+                .then(subjects =>{
+                    // clear previous subject
+                    subjectSelect.innerHTML ='<option value="0">--Select Subject--</option>';
+
+                    // populate new subject
+                    subjects.forEach(subjectItem => {
+                        const option = document.createElement('option');
+                        option.value = subjectItem.id;
+                        option.textContent = subjectItem.nameSubject;
+                        subjectSelect.appendChild(option);
+                    });
+                })
+                .catch(error => console.error('Error fetching Subject:', error));
+            } else {
+                // if no school selected
+                subjectSelect.innerHTML ='<option value="0">--Select Subject--</option>';
+            }
+        }
+
+        // if school and student selected
+        const schoolId = schoolSelect.value;
+        const studentId = studentSelect.value;
+        if(schoolId && studentId){
+            getClassByStudentAndSchool(schoolId, studentId);
+        }
+
+        // if school selected
+        if(schoolId){
+            getSubjectBySchool(schoolId);
+        }
+
+        // if school and class selected
+        const classId = classSelect.value;
+        if(schoolId && classId){
+            getStudentByClassAndSchool(schoolId, classId);
+        }
+
+        // event listener
+        schoolSelect.addEventListener('change', function(){
+            const schoolId = schoolSelect.value;
+            // get class
+            getClassBySchool(schoolId);
+            // get subject
+            getSubjectBySchool(schoolId);
+        });
+
+        classSelect.addEventListener('change', function(){
+            const schoolId = schoolSelect.value;
+            const classId = classSelect.value;
+            getStudentByClassAndSchool(schoolId, classId);
+        });
+
+    });
+</script>
 </html>
