--- a/src/main/resources/Templates/School/Subject/ScoreCard/modifyFormScoreCard.html
+++ b/src/main/resources/Templates/School/Subject/ScoreCard/modifyFormScoreCard.html
@@ -5,9 +5,10 @@
     <title>Modify Score Card</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
+
 <body>
 <h1>Modify Score Card</h1>
 <div>
@@ -84,8 +85,6 @@
             <div>
                 <select th:field="*{subject}">
                     <option value="">--Select Subject</option>
-                    <option th:each="subject : ${subjectList}" th:value="${subject.id}"
-                            th:text="${subject.nameSubject}"></option>
                 </select>
             </div>
             <div th:if="${#fields.hasErrors('subject')}">
@@ -113,4 +112,7 @@
     <a class="btn btn-primary" th:href="@{/m-score-card/showManageScoreCard}">Score Card List Manage</a>
 </div>
 </body>
+<script>
+    
+</script>
 </html>
