--- a/src/main/resources/Templates/School/Subject/indexSubject.html
+++ b/src/main/resources/Templates/School/Subject/indexSubject.html
@@ -5,11 +5,12 @@
     <title>Manager Subject</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet" type="text/css">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
 <body>
 <div><h1>Manage Subject</h1></div>
+
 <div>
     <div id="autoHide">
         <div th:if="${Error}">
@@ -29,8 +30,6 @@
             <td class="subject-id" th:text="${subject.id != null ? subject.id : 'null'}" data-id="${subject.id}"></td>
             <td th:text="${subject.nameSubject != null ? subject.nameSubject : 'null'}"></td>
             <td>
-                <a class="btn btn-success" th:href="@{/m-subject/showModifyFormSubject(id=${subject.id})}">Modify</a>
-                <!--                <a class="btn btn-success detail-link" >Detail</a>-->
                 <a class="btn btn-danger" th:href="@{/m-subject/modify-delete(id=${subject.id})}">Delete</a>
             </td>
         </tr>
@@ -40,29 +39,13 @@
 <div th:if="${success}">
     <span th:text="${success}" class="alert alert-danger"></span>
 </div>
+
 <div>
     <a class="btn btn-primary" th:href="@{/m-subject/showFormAddSubject}">Add Subject</a>
     <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
 </div>
-
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        const selects = document.querySelectorAll('.school-select');
-        const detailLinks = document.querySelectorAll('.detail-link');
-
-        selects.forEach(select => {
-            select.addEventListener('change', function() {
-                const row = this.closest('tr'); // Find the closest row (tr)
-                const subjectId = row.querySelector('.subject-id').textContent.trim(); // Get subjectId from the row
-                const schoolId = this.value;
-                detailLinks.forEach(link => {
-                    link.href = `/m-subject-detail/showManageDetailSubject?id=${subjectId}&school=${schoolId}`;
-                });
-            });
-        });
-    });
-</script>
 </body>
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
