--- a/src/main/resources/Templates/Student/addStudentForm.html
+++ b/src/main/resources/Templates/Student/addStudentForm.html
@@ -5,10 +5,9 @@
     <title>Add Student</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
-
 <body>
 <div class="container">
     <div class="row">
@@ -137,6 +136,7 @@ so that the class must to selected before the teacher
                         </ul>
                     </div>
                 </div>
+
                 <div class="form-floating mb-1">
                     <input type="email" th:field="*{email}" placeholder="Input Student Email" name="email" id="email"
                            class="form-control" required/>
