--- a/src/main/resources/Templates/Student/modifyFormStudent.html
+++ b/src/main/resources/Templates/Student/modifyFormStudent.html
@@ -5,9 +5,10 @@
     <title>Modify Teacher</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
+
 <body>
 <h1>Modify Student</h1>
 <div>
@@ -77,7 +78,7 @@
         <div class="mb-1">
             <label class="form-label">Study at school: </label>
             <select th:field="*{school}" id="school_select" required>
-                <option value="">--Select School--</option>
+                <option value="0">--Select School--</option>
                 <option th:each="school : ${schoolList}" th:value="${school.id}"
                         th:text="${school.name}"></option>
             </select>
@@ -120,11 +121,13 @@
         <h3>You updated a student "<span th:text="${success}"></span> ",</h3>
     </div>
 </div>
+
 <div>
     <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
     <a class="btn btn-primary" th:href="@{/m-student/showManageStudent}">Student List Manage</a>
 </div>
 </body>
+
 <script>
     document.addEventListener('DOMContentLoaded', function(){
         const schoolSelect = document.getElementById('school_select');
@@ -162,7 +165,7 @@
                 .then(response => response.json())
                 .then(teachers => {
                     // clear teacher previous
-                    teacherSelect.innerHTML= '<option>--Select Teacher--</option>';
+                    teacherSelect.innerHTML= '<option value="0">--Select Teacher--</option>';
 
                     // populate new teacher
                     teachers.forEach(teacherItem =>{
@@ -175,7 +178,7 @@
                 .catch(error => console.error('Error fetching Teacher:', error));
             } else {
                 // if no class or school selected
-                teacherSelect.innerHTML= '<option>--Select Teacher--</option>';
+                teacherSelect.innerHTML= '<option value="0">--Select Teacher--</option>';
             }
         }
 
