--- a/src/main/resources/Templates/Teacher/addTeacher.html
+++ b/src/main/resources/Templates/Teacher/addTeacher.html
@@ -5,10 +5,9 @@
     <title>Add Teacher</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
-    <script src="/static/JavaScript/function.js"></script>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
-
 <body>
 <div class="container">
     <div class="row">
@@ -161,6 +160,7 @@
     </div>
     <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
 </div>
+
 <script>
     document.addEventListener('DOMContentLoaded', function(){
         const schoolSelect = document.getElementById('school_select');
