--- a/src/main/resources/Templates/User/addFormUser.html
+++ b/src/main/resources/Templates/User/addFormUser.html
@@ -5,13 +5,8 @@
     <title>Add User</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/resources/static/CSS/main.css" rel="stylesheet">
-    <style>
-        table, th, td{
-            border: 1px solid black;
-            margin: 3px 3px 3px 3px;
-        }
-    </style>
+    <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <script src="/JavaScript/function.js"></script>
 </head>
 
 <body>
@@ -124,6 +119,7 @@
     </div>
     <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
 </div>
+
 <script src="/resources/static/JavaScript/function.js"></script>
 <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
