--- a/src/main/resources/Templates/login.html
+++ b/src/main/resources/Templates/login.html
@@ -37,6 +37,7 @@
 </head>
 <body>
 <div>
+
     <h3>Student Management System</h3>
     <h4>Login</h4>
     <hr/>
@@ -44,7 +45,7 @@
     <form action="#" th:action="@{/authenticateTheUser}" method="POST">
         <div id="autoHide">
             <div th:if="${param.error}">
-                <span>Login Failed,<br/> please check your username or password!</span>
+                <span>Login Failed,<br/> please check your username or password !!!</span>
             </div>
         </div>
         <!-- User name -->
@@ -83,7 +84,6 @@
             <p>Not a member? <a href="#" th:href="@{/register/showRegisterForm}">Register</a></p>
         </div>
     </form>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
             crossorigin="anonymous"></script>
